[project]
name = "pre-process-bv-csvs"
version = "0.1.0"
description = ""
authors = [
    {name = "Marc Tremblay",email = "marc.tremblay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
