[tool.poetry]
name = "pre-process-bv-csvs"
version = "0.1.0"
description = "Pre-process Berliner Volksbank CSVs for GnuCash import"
authors = ["Marc Tremblay <marc.tremblay@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.250308"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
